Prevent from type warning